@@ -1,4 +1,6 @@
 MD5 6cc8146043588a78178cdddf5633f164 loop-aes-3.0b.ebuild 1393
+MD5 8e754e24c4c6a2e0880e96251d59fbd9 loop-aes-3.0c.ebuild 1547
 MD5 95d689744084361c91e80566ea6d8c87 ChangeLog 798
 MD5 6d924ebdbe12162835ab1c1ea584636e metadata.xml 161
 MD5 31ae0c6dfb87e80f757e11b284ce19f1 files/digest-loop-aes-3.0b 67
+MD5 fea513cc65c067262f379ffa404834c7 files/digest-loop-aes-3.0c 67
