@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/loop-aes
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/loop-aes/ChangeLog,v 1.2 2005/02/05 06:28:07 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/loop-aes/ChangeLog,v 1.3 2005/06/18 08:00:09 genstef Exp $
+
+*loop-aes-3.0c (18 Jun 2005)
+
+  18 Jun 2005; Stefan Schweizer <genstef@gentoo.org> +loop-aes-3.0c.ebuild:
+  Version bump adding keyscrub use-flag thanks to Alon Bar-Lev
+  <alon@xor-t.com> in bug 95725
 
   05 Feb 2005; Stefan Schweizer <genstef@gentoo.org> loop-aes-3.0b.ebuild:
   Change config check to check for BLK_DEV_LOOP not set as in documentation,
